# url-cleaner-site

./: .gitignore  Cargo.toml  README.md  userscript.js
.github/workflows/: rust.yml
benchmarking/: benchmark.sh
src/: lib.rs  main.rs  types.rs
