[package]
name = "url-cleaner-site"
version = "0.1.0"
edition = "2021"
description = "A basic HTTP server and userscript to make using URL Cleaner in a browser easier."
repository = "https://github.com/Scripter17/url-cleaner-site"
keywords = ["url", "tracking", "paramaters", "consent"]
categories = ["url-cleaner"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.11"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["macros", "rt"] }
url = { version = "2.5.2", features = ["serde"] }
url-cleaner = { path = "../url-cleaner", default-features = false }

[features]
default = [
  "default-config",
  "minify-included-strings",

  "regex",

  "glob",

  "commands",

  "http",
  "advanced-requests",

  "base64",

  "cache-redirects"
]

default-config = ["url-cleaner/default-config"]
minify-included-strings = ["url-cleaner/minify-included-strings"]

regex = ["url-cleaner/regex"]

glob = ["url-cleaner/glob"]

commands = ["url-cleaner/commands"]

http = ["url-cleaner/http"]
advanced-requests = ["url-cleaner/advanced-requests"]

cache = ["url-cleaner/cache"]
cache-redirects = ["url-cleaner/cache-redirects"]

base64 = ["url-cleaner/base64"]

debug = ["url-cleaner/debug"]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
unused_import_braces = "warn"

[lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
perf = { level = "warn", priority = -1 }
arithmetic_side_effects = "warn"
cargo_common_metadata = "warn"
todo = "warn"
enum_variant_names = "allow"
missing_docs_in_private_items = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
indexing_slicing = "deny"
unit_arg = "allow"
match_like_matches_macro = "allow"
module_inception = "allow"
